version-23.2/reference/rpk/rpk-generate/rpk-generate-shell-completion.mdx
---
title: rpk generate shell-completion
rpk_version: v23.2.1
---

<head>
  <meta name="title" content="rpk generate shell-completion | Redpanda Docs" />
  <meta name="description" content="rpk generate shell-completion " />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/rpk/rpk-generate/rpk-generate-shell-completion/" />
</head>

Shell completion can help autocomplete rpk commands when you press tab.

### Bash

Bash autocompletion relies on the bash-completion package. You can test if you
have this by running `type \_init_completion`, if you do not, you can install
the package through your package manager.

If you have bash-completion installed, and the command still fails, you likely
need to add the following line to your `~/.bashrc`:

```bash
source /usr/share/bash-completion/bash_completion
```

To ensure autocompletion of rpk exists in all shell sessions, add the following
to your `~/.bashrc`:

```bash
command -v rpk >/dev/null && . <(rpk generate shell-completion bash)
```

Alternatively, to globally enable rpk completion, you can run the following:

```
rpk generate shell-completion bash > /etc/bash_completion.d/rpk
```

### Zsh

To enable autocompletion in any zsh session for any user, run this once:

```
rpk generate shell-completion zsh > "${fpath[1]}/_rpk"
```

You can also place that command in your `~/.zshrc` to ensure that when you update
rpk, you update autocompletion. If you initially require `sudo` to edit that
file, you can `chmod` it to be world writeable, after which you will always be
able to update it from `~/.zshrc`.

If shell completion is not already enabled in your zsh environment, also
add the following to your `~/.zshrc`:

```zsh
autoload -U compinit; compinit
```

### Fish

To enable autocompletion in any `fish` session, run:

```fish
rpk generate shell-completion fish > ~/.config/fish/completions/rpk.fish
```

## Usage

```bash
rpk generate shell-completion [flags]
```

## Flags

<!--
[cols=",,",]
|===
|*Value* |*Type* |*Description*

|-h, --help |- |Help for shell-completion.

|--config |string |Redpanda or rpk config file; default search paths are
~/.config/rpk/rpk.yaml, $PWD, and /etc/redpanda/`redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X
help' for detail or '-X list' for terser detail.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===

-->
